made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html>
     <head>
-        <link href="/ui/style.css" rel="stylesheet" />
+        <link href="style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="madi.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am vishnu and this is my first web app.
+<h4>new changes </h4>
+this is the change what i have made in my web app. and this is intesting .
+
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
