--- a/ui/index.html
+++ b/ui/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
     <head>
-        <link href="ui/style.css" rel="stylesheet" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="center">
-            <img src="ui/madi.png" class="img-medium"/>
+            <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
