--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -18,7 +18,13 @@
         </div>
         <div>
             <p>
-                this is the content for my article.       this is the content for my first article.       this is the content for my first article.       this is the content for my first article.       this is the content for my first article.       this is the content for my first article.       this is the content for my first article.       this is the content for my first article.       this is the content for my first article.       this is the content for my first article.
+               this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.
+         </p>
+         <p>
+               this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.
+         </p>
+         <p>
+               this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.  this is the content for my second article.
          </p>
              
         </div>
