[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -11,7 +11,7 @@
         </div>
         <hr/>
         <h3>
-            Article-one
+            Article-three
         </h3>
         <div>
             sep 5,2016
