[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -11,8 +11,8 @@
         </div>
         <hr/>
         <h3>
-            Article-one
-        </h3>
+            Article-two
+            </h3>
         <div>
             sep 5,2016
         </div>
