--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -9,7 +9,7 @@
             .container
             {
                 max-width: 8000px;
-                margin: center;
+                margin: 0 auto;
                 color: grey;
                 font-family:sans-serif;
             }
